editing some minor things as per reviewer suggestions

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -243,18 +243,15 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
         Bayesian models are often run on multiple MCMC chains. In our case, we deliberately run only one MCMC chain because the latent variables in our model ($r_i$ and $e_j$) are invariant to sign switching. This means that different MCMC chains can return coefficient values which are of the same magnitude, but opposing signs. As with the boral function in the boral R package \parencite{Hui2021} and the MCMCfactanal function in the MCMCpack package \parencite{Martin2011}, we run one chain only to simplify issues with checking chain convergence and computing parameter estimates which arise from sign-switching. Though many MCMC convergence diagnostics require multiple chains to be computed, single chain convergence can be assessed with the Geweke convergence statistic \parencite{Geweke1992}, for example with the geweke.diag() function from the coda package \parencite{Plummer2006}, as well as visually checking traceplots.
 
         \paragraph{}
-        STAN returns parameters as distributions which maximise the likelihood, and are conditioned by the data and priors. Priors describe the distribution of plausible values which these parameters may take. For an introduction to Bayesian inference which relates the use of priors to frequentist hypothesis testing, see \textcite{Ellison1996}. We recommend investigators experiment with setting different informed priors to both improve model convergence and verify the robustness of parameter estimates. The resulting parameters are termed posterior distributions, and samples from the posterior are drawn for analysis. Using parameter distributions rather than point estimates allows for easy inclusion of uncertainty in the analysis of results, we therefore recommend bootstrap sampling from each posterior interaction strength distribution to create multiple samples of the community interaction matrix. \textcite{Ellison2004} also provides an accessible review of parameter estimates and the use of posterior distributions using a worked example on ant species richness data.
+        STAN returns parameters as distributions which maximise the likelihood, and are conditioned by the data and priors. Priors describe the distribution of plausible values which these parameters may take. For an introduction to Bayesian inference which relates the use of priors to frequentist hypothesis testing, see \textcite{Ellison1996}. We recommend investigators experiment with setting different informed priors to both improve model convergence and verify the robustness of parameter estimates. The resulting parameters are termed posterior distributions, and samples from the posterior are drawn for analysis. Using parameter distributions rather than point estimates allows for easy inclusion of uncertainty in the analysis of results, we therefore recommend sampling from each posterior interaction strength distribution to create multiple samples of the community interaction matrix. See \textcite{Ellison2004} for an accessible review of parameter estimates and the use of posterior distributions using a worked example.
 
     \subsection{Dealing with sparse networks}
     \label{meth:sparse}
 
     \textbf{In horizontal systems, interaction networks are expected to be non-sparse because species are typically assumed to interact via the same set of shared resources. Nonetheless, it is likely that the posterior distributions of some interaction estimates returned by the model will overlap with zero. We note that an overlap with zero may be due to several factors and does not necessarily equate to an interaction being insignificant. Firstly, an overlap with zero may arise when an interaction is positive or negative depending on local conditions. Secondly, it may indicate the interaction is poorly informed and hence overlaps with zero because it has a large posterior distribution since we cannot confidently speak to its effect. Lastly, the interaction may be well-informed and weak, in which case the posterior is centered around zero.}
 
-    \textbf{If a user of our framework has good cause to believe that many interactions are weak and the network is sparse, there are many ways to deal with this issue...} % Finish this paragraph when I know what's happening with Reviewer 1.
+    \textbf{If, contrarily to our assumptions, a user of our framework has good cause to believe that many interactions are weak and the network is instead sparse, there exists multiple approaches to this issue. For example, setting strongly informed priors centered around zero for those interactions that are thought to be negligeable would be relatively easy to implement in the code we provide. We also point the reader towards alternative methods which have been developped explicitly for sparse interaction networks \parencite{Weiss-Lehman2022}.} 
 
-    Here I can add a section on sparsity - how might we eliminate parameters if we have reasonable cause to think they are $0$? Various possibilities e.g. bayesian variable selection. Point readers towards possible directions and leave decision to future users because there are many schools of thought here. 
-    Instead of removing parameter, sample from prior that is on 0!
-    Topher weiss-lehman's method with the erularised horseshoe prior implies scarcity 
 
     \subsection{Case study}
 
@@ -308,7 +305,10 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
     Our novel framework quantifies the effects of interacting species and reciprocal performance, allowing the estimation of diverse, horizontal interaction matrices. The resulting matrices are non-symmetrical and can contain both positive and negative interactions, as well as the effect of a species on itself. This framework is flexible to metrics of performance, group identity (e.g.\ species, population, etc.) and diversity. We also propose a way to estimate unidentifiable interactions from those which are identifiable, \textbf{which is a significant feature given that networks for horizontal systems are expected to be non-sparse}. The matrices generated through this framework can be transformed into interaction networks through the use of further models describing the system's interaction dynamics. These features make it particularly useful in an ecological context, as illustrated in our case study on a diverse wildflower community, as well as flexible for use with data from the wide range of complex systems dominated by horizontal interactions.
 
     \paragraph{}
-    Here, we illustrate the unique useful features of this framework using a typical plant-dominated ecological system for context. In our case study, we show how wildflower species are linked through  plant-plant interaction networks. In turn, this network can help us identify what roles specific species play within a community, and explore how the mechanisms maintaining diversity and stability operate in these systems. By estimating the effects of species on each other's performance, and subsequently their population growth and patterns of density, our method stands in contrast to association networks and returns qualitatively different information. There are a wide range of association network frameworks used in ecology \parencite{Burns2010, Losapio2018, Montesinos-Navarro2018} and collectively, they are a common alternative to estimating interaction networks in high-diversity systems as they capture spatial associations between species (e.g.\ \cite{Saiz2018}) and require easier-to-obtain data. Association networks also benefit from easy implementation with a wide range of packages in R (e.g.\ \cite{Griffith2016}) though the resulting networks are typically symmetrical and cannot capture a species' effect on itself. Moreover, association networks remain poor predictors of species interactions and rarely match empirical estimates \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
+    Here, we illustrate the unique useful features of this framework using a typical plant-dominated ecological system for context. In our case study, we show how wildflower species are linked through  plant-plant interaction networks. In turn, this network can help us identify what roles specific species play within a community, and explore how the mechanisms maintaining diversity and stability operate in these systems. 
+
+
+    %By estimating the effects of species on each other's performance, and subsequently their population growth and patterns of density, our method stands in contrast to association networks and returns qualitatively different information. There are a wide range of association network frameworks used in ecology \parencite{Burns2010, Losapio2018, Montesinos-Navarro2018} and collectively, they are a common alternative to estimating interaction networks in high-diversity systems as they capture spatial associations between species (e.g.\ \cite{Saiz2018}) and require easier-to-obtain data. Association networks also benefit from easy implementation with a wide range of packages in R (e.g.\ \cite{Griffith2016}) though the resulting networks are typically symmetrical and cannot capture a species' effect on itself. Moreover, association networks remain poor predictors of species interactions and rarely match empirical estimates \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
 
     \paragraph{}
     Species interaction networks have a wide range of practical applications, such as evaluating ecosystem response to human-altered landscapes, guiding future management decisions \parencite{Ross2011} or exploring how communities may respond to global warming \parencite{Gorman2019}. Conservation and ecosystem management efforts aimed at regulating species abundances can, for example, use the information provided by an interaction network to prioritise which species to conserve or eradicate based on their role in the community. Such roles can be deduced by a species' position in the interaction network \parencite{Cirtwill2018a} and as illustrated in our case study \textbf{on a horizontal system}. Identifying keystone, foundation and other important types of species roles is also helpful for understanding biological diversity, ecosystem integrity and functioning, especially in response to disturbances and other stresses \parencite{Nyakatya2008, Orwin2016, Losapio2017, Narwani2019} \textbf{though often requires the inclusion of other trophic levels}. The examples we describe in our case study are not exhaustive, but serve to illustrate how interaction networks can help us understand both community dynamics overall and the effects \& response of specific species towards the community. 
