--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -100,21 +100,28 @@ Data will be submitted to Dryad upon publication.
 
     
     \paragraph{}
-    In many biological systems, interactions between system elements (be these species, individuals, etc.) affect population-level performance and together determine the dynamics of the whole system. In order to understand system dynamics when multiple system elements are involved, such complex systems can be represented as networks where the elements are nodes and linked by interactions \parencite{Pimm1978}. These nodes can take on a wide array of identities, including cells, individuals, populations or species. Likewise, interactions or links can operate via many different mechanisms and have a wide range of effects on the nodes. Biological networks have been observed to typically differ from randomly-assembled networks in important and varied ways, thus informing us on the biological processes structuring these systems \parencite{Dunne2002, Kinlock2019}.
+    In many biological systems, interactions between system elements (be these species, individuals, etc.) affect population-level performance and together determine the dynamics of the whole system. In order to understand system dynamics when multiple system elements are involved, such complex systems can be represented as networks where the elements are nodes and linked by interactions \parencite{Pimm1978}. These nodes can take on a wide array of identities, including cells, individuals, populations or species. Likewise, interactions or links can operate via many different mechanisms and have a wide range of effects on the nodes. \textbf{Network theory has been widely applied to investigate biological systems, including ecological communities consisting of food webs, plant-pollinator and host-parasite interactions (e.g.\ \cite{Lafferty2008, Thompson2012, Dunne2013, Stouffer2014, Cirtwill2015a}), inforuming us on the underlying biological processes structuring these systems \parencite{Dunne2002, Kinlock2019}. }
 
-    \paragraph{}
-    Network theory has been widely applied to investigate the structure of biological systems such as food webs and other types of multi-level ecological interaction networks. Because network theory can be used to characterise diversity, stability and other community-level properties emerging from species interactions, it has had a long and meaningful impact on our understanding of ecological communities. There is now a rich body of work describing the structural properties of food webs, plant-pollinator networks, and host-parasite interactions (e.g.\ \cite{Lafferty2008, Thompson2012, Dunne2013, Stouffer2014, Cirtwill2015a}). Horizontal networks, however, where interactions occur within the same level of organisation (for example interactions between plants belonging to the same food web) have been more neglected by network ecology \parencite{Ellison2019}. These species and their interactions have been found to alter the structure, stability and diversity-functioning relationships of the whole multi-level system \parencite{Hammill2015, Giling2019, Zhao2019, Miele2019}, which makes integrating horizontal and vertical networks a key challenge in improving our understanding of system dynamics and persistence \parencite{Godoy2018c}.
+    %Biological networks have been observed to typically differ from randomly-assembled networks in important and varied ways, thus informing us on the biological processes structuring these systems \parencite{Dunne2002, Kinlock2019}. 
 
-    %\paragraph{} % I reckon this paragraph can be cut?? It doesn't bring that much to the intro... Can be kept for MEE
-    %In many horizontal systems, interactions between nodes are not always easy to observe empirically and must instead be deduced through other means. One strategy is to look at associations between the nodes: nodes which are often found together are assumed to interact more strongly than nodes which rarely co-occur (e.g. \cite{Araujo2011}). This approach benefits from a wide range of packages available in R, requires fairly simple data (presence/absence of the nodes) and can be used to deduce associations between large numbers of nodes. An important drawback remains: association networks cannot always distinguish between the multiple confounding factors which lead to co-occurrence, and in ecological communities little evidence supports their use as a proxy for interactions \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
-    %% [Keep this if I have enough spare words]
+    %\paragraph{}
+    %Network theory has been widely applied to investigate the structure of biological systems such as food webs and other types of multi-level ecological interaction networks. Because network theory can be used to characterise diversity, stability and other community-level properties emerging from species interactions, it has had a long and meaningful impact on our understanding of ecological communities. There is now a rich body of work describing the structural properties of food webs, plant-pollinator networks, and host-parasite interactions (e.g.\ \cite{Lafferty2008, Thompson2012, Dunne2013, Stouffer2014, Cirtwill2015a}). Horizontal networks, however, where interactions occur within the same level of organisation (for example interactions between plants belonging to the same food web) have been more neglected by network ecology \parencite{Ellison2019}. These species and their interactions have been found to alter the structure, stability and diversity-functioning relationships of the whole multi-level system \parencite{Hammill2015, Giling2019, Zhao2019, Miele2019}, which makes integrating horizontal and vertical networks a key challenge in improving our understandingof system dynamics and persistence \parencite{Godoy2018c}.
 
-    \paragraph{} 
-    In many horizontal systems, interactions between species are not always easy to observe empirically and must instead be deduced through other means. A common approach in ecology is to directly quantify the effects of interacting species on the species of interest by evaluating its performance in the absence and presence of potential interaction partners \parencite{Connell1961, Grace1990}. `Performance' can refer to any variable of interest that affects the dynamics of the system, for example quantity of resources gathered, biomass, or population growth rate. \textbf{Measuring species interactions as effects on performance allows us to infer future population trajectories through the use of population dynamics models, and thus draw conclusions about the effects of interactions on potential coexistence and diversity \parencite{Laska1998}.} The resulting interactions are phenomenological and thus not dependent on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system \parencite{Novak2010}. Such methods can quickly become data intensive and computationally complex, however, as the number of species $S$ increases and the number of potential direct interactions subsequently increases to $S^2$. Highly diverse systems pose a further challenge: the abundance distribution of different species is typically skewed, with a few species making up the majority of abundances and a large number of elements remaining rare \parencite{Fisher1943}. Given that data collection is limited in time and scope, interactions with rarer species especially may not be observed simply by chance. We thus run the risk of excluding them from analyses regardless of the role they might play \parencite{Olesen2011}. Empirically quantifying interaction matrices for diverse horizontal systems thus requires a method that is flexible to both a high number of species, and potential gaps in our records of interactions. 
-
+ 
 
     \paragraph{} 
-    We present a general framework to estimate interactions in diverse horizontal systems. We specify a joint model which allows us to estimate both pairwise identifiable and pairwise unidentifiable interactions from measures of performance in the absence and presence of different interaction partners. We implement the model in STAN, a Bayesian statistical language, and apply it to an ecological case study of an annual wildflower community in Western Australia. Using this dataset, we estimate positive and negative interactions between 22 focal species and 52 neighbouring species and illustrate how to couch these results into established models of population dynamics. This step further widens the potential applications of this novel framework by accounting for other demographic processes affecting species or element performance, and thus system dynamics. We showcase the advantages of this approach by illustrating a range of findings from our case study. We suggest potential applications in species management and conservation that make use of the rich information provided by horizontal interaction networks as developed using our novel framework.
+    \textbf{Horizontal networks, however, where interactions occur within the same level of organisation (for example interactions between plants belonging to the same food web) have been more neglected by network ecology \parencite{Ellison2019}}. In such systems, interactions between species are not always easy to observe empirically and must instead be deduced through other means. A common approach in ecology is to directly quantify the effects of interacting species on the species of interest by evaluating its performance in the absence and presence of potential interaction partners \parencite{Connell1961, Grace1990}. `Performance' can refer to any variable of interest that affects the dynamics of the system, for example quantity of resources gathered, biomass, or population growth rate. \textbf{Measuring species interactions as effects on performance allows us to infer future population trajectories through the use of population dynamics models, and thus draw direct conclusions about the effects of interactions on patterns of coexistence and diversity \parencite{Laska1998}.} The resulting interactions are phenomenological and thus not dependent on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system \parencite{Novak2010}. Such methods can quickly become data intensive and computationally complex, however, as the number of species $S$ increases and the number of potential direct interactions subsequently increases to $S^2$. Highly diverse systems pose a further challenge: the abundance distribution of different species is typically skewed, with a few species making up the majority of abundances and a large number of elements remaining rare \parencite{Fisher1943}. Given that data collection is limited in time and scope, interactions with rarer species especially may not be observed simply by chance. We thus run the risk of excluding them from analyses regardless of the role they might play \parencite{Olesen2011}. Empirically quantifying interaction matrices for diverse horizontal systems thus requires a method that is flexible to both a high number of species, and potential gaps in our records of interactions. 
+
+    \paragraph{} % PARAGRAPH TO BETTER MOTIVATE
+    \textbf{Various methods have been developed to circumventing these issues. A common approach is to reduce the number of parameters to be estimated by assuming many interactions are weak enough to be negligeable, and thus do not need to be inferred \parencite{}. Other methods attempt to infer interactions for which there is little data from traits \parencite{}, phylogeny \parencite{} or ... \parencite{Ovastaikenen}. Alternatively, interactions are not identified and models instead rely on estimating association between species, which include the effects of interactions. Here we present another alternative, which ....}
+
+
+    \paragraph{} 
+    We present a general framework to estimate interactions in diverse horizontal systems. We specify a joint model which allows us to estimate both pairwise identifiable and pairwise unidentifiable interactions from measures of performance in the absence and presence of different interaction partners. We implement the model in STAN, a Bayesian statistical language, and apply it to an ecological case study of an annual wildflower community in Western Australia. Using this dataset, we estimate positive and negative interactions between 22 focal species and 52 neighbouring species and illustrate the advantages of this approach through a range of ecologically-relevant findings. \textbf{We further describe how to couch the returned interaction estimates into established models of population dynamics, thus allowing inferences to be drawn between the structure and nature of the interaction matrix and patterns of community abundances and biodiversity. This framework presents a new and exciting way to make use of data that has historically been insufficient or too incomplete to infer all pairwise interactions, alongside pre-written model code in STAN which requires little to no modification for immediate application to a much wider variety of datasets than the case study presented here.}
+
+   % Whilst various methods have been proposed to retrieve horizontal interaction networks from highly diverse datasets, these approaches tend to assume sparsity of interactions. In other words, they assume that not all interactions are realised (there exist true zeros), which allows the methods to reduce the number of parameters to be evaluated (fewer interactions = fewer parameters). Ours allows the estimation of interactions which would usually not be estimated by other methods (e.g. Ovatskained et al. Weiss-Lehmann et al, association networks)Ovatskained et al. Weiss-Lehmann et al are two such approaches. We thus open up a new range of questions which can be asked from pre-existing datasets.  DISCUSSION 
+   % Ovaskainen - model with independant alphas along the diagonal and then rather than making the re to fill in gaps, all the alphas are the diagonal + what we are inferring as the response and effect matrix. Ovaskainen 2017 does not assume sparsity but requires less information that we do(?) and makes other simplifying assumptions
+
 
 
 \section{Methods}
@@ -240,7 +247,7 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
         From the model file, only the link function for $p_k$ and it's parameterisation need to be modified in order to apply it to a differently-distributed dataset. Additionally, non-integer measures of performance (e.g.\ biomass) should be redefined as real rather than integers in the data block. In the code given, a negative binomial distribution is used to fit seed production but a different distribution may be more appropriate when using other measures of performance.   
 
         \paragraph{}
-        Bayesian models are often run on multiple MCMC chains. In our case, we deliberately run only one MCMC chain because the latent variables in our model ($r_i$ and $e_j$) are invariant to sign switching. This means that different MCMC chains can return coefficient values which are of the same magnitude, but opposing signs. As with the boral function in the boral R package \parencite{Hui2021} and the MCMCfactanal function in the MCMCpack package \parencite{Martin2011}, we run one chain only to simplify issues with checking chain convergence and computing parameter estimates which arise from sign-switching. Though many MCMC convergence diagnostics require multiple chains to be computed, single chain convergence can be assessed with the Geweke convergence statistic \parencite{Geweke1992}, for example with the geweke.diag() function from the coda package \parencite{Plummer2006}, as well as visually checking traceplots.
+        Bayesian models are often run on multiple MCMC chains. In our case, we deliberately run only one MCMC chain because the latent variables in our model ($r_i$ and $e_j$) are invariant to sign switching. This means that different MCMC chains can return coefficient values which are of the same magnitude, but opposing signs. As with the boral function in the boral R package \parencite{Hui2021} and the MCMCfactanal function in the MCMCpack package \parencite{Martin2011}, we run one chain only to simplify issues with checking chain convergence and computing parameter estimates which arise from sign-switching. Though many MCMC convergence diagnostics require multiple chains to be computed, single chain convergence can be assessed with the Geweke convergence statistic \parencite{Geweke1992}, for example with the geweke.diag() function from the coda package \parencite{Plummer2006}, as well as visually checking traceplots \textbf{but see Supplementary Methods \ref{SI:multichains} for model validation on multiple chains}.
 
         \paragraph{}
         STAN returns parameters as distributions which maximise the likelihood, and are conditioned by the data and priors. Priors describe the distribution of plausible values which these parameters may take. For an introduction to Bayesian inference which relates the use of priors to frequentist hypothesis testing, see \textcite{Ellison1996}. We recommend investigators experiment with setting different informed priors to both improve model convergence and verify the robustness of parameter estimates. The resulting parameters are termed posterior distributions, and samples from the posterior are drawn for analysis. Using parameter distributions rather than point estimates allows for easy inclusion of uncertainty in the analysis of results, we therefore recommend sampling from each posterior interaction strength distribution to create multiple samples of the community interaction matrix. See \textcite{Ellison2004} for an accessible review of parameter estimates and the use of posterior distributions using a worked example.
@@ -309,6 +316,9 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
 
 
     %By estimating the effects of species on each other's performance, and subsequently their population growth and patterns of density, our method stands in contrast to association networks and returns qualitatively different information. There are a wide range of association network frameworks used in ecology \parencite{Burns2010, Losapio2018, Montesinos-Navarro2018} and collectively, they are a common alternative to estimating interaction networks in high-diversity systems as they capture spatial associations between species (e.g.\ \cite{Saiz2018}) and require easier-to-obtain data. Association networks also benefit from easy implementation with a wide range of packages in R (e.g.\ \cite{Griffith2016}) though the resulting networks are typically symmetrical and cannot capture a species' effect on itself. Moreover, association networks remain poor predictors of species interactions and rarely match empirical estimates \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
+
+    %\paragraph{} 
+    %In many horizontal systems, interactions between nodes are not always easy to observe empirically and must instead be deduced through other means. One strategy is to look at associations between the nodes: nodes which are often found together are assumed to interact more strongly than nodes which rarely co-occur (e.g. \cite{Araujo2011}). This approach benefits from a wide range of packages available in R, requires fairly simple data (presence/absence of the nodes) and can be used to deduce associations between large numbers of nodes. An important drawback remains: association networks cannot always distinguish between the multiple confounding factors which lead to co-occurrence, and in ecological communities little evidence supports their use as a proxy for interactions \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
 
     \paragraph{}
     Species interaction networks have a wide range of practical applications, such as evaluating ecosystem response to human-altered landscapes, guiding future management decisions \parencite{Ross2011} or exploring how communities may respond to global warming \parencite{Gorman2019}. Conservation and ecosystem management efforts aimed at regulating species abundances can, for example, use the information provided by an interaction network to prioritise which species to conserve or eradicate based on their role in the community. Such roles can be deduced by a species' position in the interaction network \parencite{Cirtwill2018a} and as illustrated in our case study \textbf{on a horizontal system}. Identifying keystone, foundation and other important types of species roles is also helpful for understanding biological diversity, ecosystem integrity and functioning, especially in response to disturbances and other stresses \parencite{Nyakatya2008, Orwin2016, Losapio2017, Narwani2019} \textbf{though often requires the inclusion of other trophic levels}. The examples we describe in our case study are not exhaustive, but serve to illustrate how interaction networks can help us understand both community dynamics overall and the effects \& response of specific species towards the community. 
